Added login placeholder

--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
         "eslint": "^8.22.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
+        "react-router-dom": "^6.3.0",
         "react-scripts": "^5.0.1",
         "web-vitals": "^2.1.4"
     },
     "scripts": {
+        "venv": "cd api/ && python3 -m venv .venv && cd .. && python3 -m pip install -r requirements.txt",
+        "py-start": "python3 activate.py",
         "start": "react-scripts start",
         "build": "react-scripts build",
         "test": "react-scripts test",
